Avoid health variable allowing killing
Signed-off-by: Pablo Herrera <pabloherrerapalacio@gmail.com>